# deal.ii-qc

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CTestConfig.cmake  README.md
benchmarks/: CMakeLists.txt  neighbor_lists.bench.cc
cmake/: deal.II-qcConfig.cmake.in  install_git_hooks.cmake  write_config.cmake
cmake/git-hooks/: pre-commit.in  pre-push.in
doc/: .gitignore  mainpage.dox  mesh_clusters.001.png.ps  options.dox.in  theory.tex
include/deal.II-qc/: utilities.h  version.h
include/dealiiqc/: assembly_data.h  qc.h  utilities.h  utility.h
source/: main.cc  version.cc.in
source/atom/: atom.cc  atom_handler.cc  cell_molecule_tools.cc  cluster_weights.cc  data_out_atom_data.cc  data_out_base.cc  molecule_handler.cc  parse_atom_data.cc
source/base/: quadrature_lib.cc  utilities.cc
source/configure/: configure_qc.cc
source/core/: qc.cc
source/grid/: shared_tria.cc
source/io/: configure_qc.cc  configure_qc.inst.in  data_out_atom_data.cc  geometry_base.cc  geometry_box.cc  geometry_gmsh.cc  parse_atom_data.cc
source/potentials/: dipole_potential_field.cc  nano_indentor.cc  pair.cc  pair_base.cc  pair_born_cut.cc  pair_born_cut_class2_coul_wolf.cc  pair_class2.cc  pair_coul_wolf.cc  pair_lj_cut.cc  pair_lj_cut_coul_wolf.cc  potential_field.cc  potential_field_function_parser.cc  potential_field_parser.cc  spherical_nano_indentor.cc
source/qc/: core.cc
tests/: run_testsuite.cmake  tests.h
tests/adaptors/: rol_vector_adaptor_02.cc  rol_vector_adaptor_no_ghost_01.cc  rol_vector_adaptor_with_ghost_01.cc
tests/atom/: atom_handler_cluster_weight_01.cc  atom_handler_cluster_weight_01.output  atom_handler_cluster_weight_02.cc  atom_handler_neigh_list_01.cc  atom_handler_neigh_list_01.output  atom_handler_parse_atoms_01.cc  atom_handler_thrown_atoms_01.cc  atom_handler_thrown_atoms_02.cc  atom_handler_thrown_atoms_02.output  cell_atom_tools_01.cc  cell_atom_tools_01.output  cell_atom_tools_02.cc  cell_atom_tools_n_cluster_01.cc  cell_molecule_tools_00.cc  cell_molecule_tools_00.output  cell_molecule_tools_01.cc  cell_molecule_tools_02.cc  cell_molecule_tools_atomicity_01.cc  cell_molecule_tools_atomicity_01.output  cell_molecule_tools_atomicity_02.cc  cell_molecule_tools_atomicity_02.output  cell_molecule_tools_cluster_weight_01.cc  cell_molecule_tools_cluster_weight_02.cc  cell_molecule_tools_compute_density_01.cc  cell_molecule_tools_compute_density_01.output  cell_molecule_tools_compute_density_02.cc  cell_molecule_tools_compute_density_02.mpirun=2.output  cell_molecule_tools_compute_density_02.output  cell_molecule_tools_extract_dofs_01.cc  cell_molecule_tools_extract_dofs_01.mpirun=2.output  cell_molecule_tools_extract_dofs_01.mpirun=3.output  cell_molecule_tools_extract_dofs_02.cc  cell_molecule_tools_extract_dofs_02.mpirun=2.output  cell_molecule_tools_extract_dofs_02.mpirun=3.output  cell_molecule_tools_extract_dofs_02.output  cell_molecule_tools_n_cluster_01.cc  cell_molecule_tools_n_cluster_01.output  cell_molecule_tools_thrown_molecules_01.cc  cell_molecule_tools_thrown_molecules_02.cc  molecule_handler_neigh_list_01.cc  (+16 more)
tests/base/: quadrature_trapezmidpoint_01.cc  quadrature_trapezmidpoint_01.output
tests/configure/: custom_initial_refinement_01.cc  custom_initial_refinement_01.output  geometry_box_01.cc  geometry_box_01.output  geometry_box_02.cc  geometry_box_02.mpirun=2.output  geometry_box_02.mpirun=4.output  geometry_gmsh_01.cc
tests/core/: atom_handler_01.cc  atoms_to_cells_01.cc  atoms_to_cells_01.output  compute_tools_inter_atomic_01.cc  compute_tools_inter_atomic_01.output  compute_tools_intra_molecular_01.cc  compute_tools_intra_molecular_02.cc  compute_tools_intra_molecular_02.output  empty_neighbor_lists_01.cc  empty_neighbor_lists_01.mpirun=2.output  energy_01.cc  energy_and_gradient_lj_01.cc  energy_and_gradient_lj_01.output  energy_and_gradient_lj_02.cc  energy_and_gradient_lj_02.mpirun=2.output  energy_and_gradient_lj_02.output  energy_and_gradient_lj_03.cc  energy_and_gradient_lj_03.mpirun=2.output  energy_and_gradient_lj_03.output  energy_and_gradient_lj_04.cc  energy_and_gradient_lj_04.mpirun=2.output  energy_and_gradient_lj_04.output  energy_and_gradient_lj_with_atomicity_01.cc  energy_and_gradient_lj_with_atomicity_01.output  energy_and_gradient_lj_with_atomicity_02.cc  energy_and_gradient_lj_with_atomicity_02.output  energy_and_gradient_lj_with_atomicity_03.cc  energy_and_gradient_lj_with_atomicity_03.output  energy_born_01.cc  energy_born_01.output  energy_born_class2_coul_wolf_01.cc  energy_born_class2_coul_wolf_01.output  energy_born_class2_coul_wolf_02.cc  energy_born_class2_coul_wolf_02.output  energy_born_class2_coul_wolf_03.cc  energy_born_class2_coul_wolf_03.output  energy_born_class2_coul_wolf_04.cc  energy_born_class2_coul_wolf_04.output  energy_born_class2_coul_wolf_05.cc  energy_born_class2_coul_wolf_05.output  (+37 more)
tests/data/: 01_disordered_atom.data  02_disordered_atom.data  16_NaCl_atom.data  8_NaCl_atom.data  BaTiO3_cs_1x1x1_atom.data  BaTiO3_cs_1x1x1_qcatom.data  BaTiO3_cs_2x1x1_atom.data  BaTiO3_cs_2x1x1_qcatom.data  NaCl_1x1x1_atom.data  NaCl_1x1x1_molecule.data  NaCl_2x2x2_atom.data  NaCl_2x2x2_molecule.data  NaCl_coreshell_1x1x1_atom.data
tests/io/: geometry_box_01.cc  geometry_box_01.output  hex_01.msh  in.qc  mesh_01.cc  mesh_01.output  parse_atom_data_01.cc  write_vtp_01.cc  write_vtp_01.mpirun=3.output
tests/potentials/: dipole_potential_field_01.cc  dipole_potential_field_01.output  pair_born_cut_01.cc  pair_born_cut_01.output  pair_born_cut_02.cc  pair_class2_01.cc  pair_class2_01.output  pair_coul_wolf_01.cc  pair_coul_wolf_01.mc  pair_coul_wolf_01.output  pair_coul_wolf_02.cc  pair_coul_wolf_02.output  (+12 more)
utilities/: .clang-format  CMakeLists.txt  download_clang_format  indent  indent.py  requirements.txt
utilities/ase/: .pylintrc  barium_titanate_coreshell.py  lammpsdata.py  molecules.py
utilities/moltemplate/: NaCl_unit_cell_3d.lt  molsetup.py
utilities/qcase/: barium_titanate_coreshell.py  lammpsdata.py  molecules.py  sodium_chloride.py
utilities/qcase/data/: __init__.py
(+165 files in other folders)
