
IF(CMAKE_VERSION VERSION_LESS 3.12)
  FIND_PACKAGE(PythonInterp)
  IF(PYTHONINTERP_FOUND)
    SET(Python_EXECUTABLE ${PYTHON_EXECUTABLE})
  ENDIF()
ELSE()
  FIND_PACKAGE(Python COMPONENTS Interpreter)
ENDIF()

IF(Python_EXECUTABLE)
  EXECUTE_PROCESS(COMMAND ${Python_EXECUTABLE}
    -c "import distutils.sysconfig as cg; print(cg.get_python_lib(1,0,prefix='${CMAKE_INSTALL_PREFIX}'))"
    OUTPUT_VARIABLE PYTHON_DEFAULT_INSTALLATION_DIR OUTPUT_STRIP_TRAILING_WHITESPACE
    )
  INSTALL(
    FILES "${CMAKE_CURRENT_SOURCE_DIR}/qcase/__init__.py"
          "${CMAKE_CURRENT_SOURCE_DIR}/qcase/molecules.py"
          "${CMAKE_CURRENT_SOURCE_DIR}/qcase/lammpsdata.py"
    DESTINATION "${PYTHON_DEFAULT_INSTALLATION_DIR}/qcase"
    )
  INSTALL(
    FILES "${CMAKE_CURRENT_SOURCE_DIR}/qcase/data/__init__.py"
    DESTINATION "${PYTHON_DEFAULT_INSTALLATION_DIR}/qcase/data"
  )
ENDIF()
